hopefully fixed mobile overflow issue

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,6 +15,10 @@
   font-display: swap;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   margin: 0;
